namespaces/live-1.cloud-platform.service.justice.gov.uk/hmpps-visitor-registry-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-visitor-registry-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "prod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "prison-visit-booking"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts"
    cloud-platform.justice.gov.uk/application: "HMPPS Visitor Registry"
    cloud-platform.justice.gov.uk/owner: "Prisoner Communications: prisonvisitsbooking@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-visitor-registry.git"
    cloud-platform.justice.gov.uk/team-name: "book-a-prison-visit"
